[package]
name = "foogold"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bip39 = "1.0.1"
bitcoin = "0.29.2"
frankenstein = "0.23.0"
rand = "0.6.0"
typed-builder = "0.12.0"
bitcoincore-rpc = "0.16.0"
diesel = { version = "2", features = ["postgres","r2d2"] }
dotenvy = "0.15"
once_cell = "1.17.0"
ureq = "2.6.2"
serde_json = "1.0"
serde = "1.0"
thiserror = "1.0"
itertools = "0.10.5"